--- a/.github/workflows/Huh.yml
+++ b/.github/workflows/Huh.yml
@@ -1,1 +1,39 @@
+name: MICKEY0P
 
+on: push
+
+jobs:
+
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+
+      - uses: actions/checkout@v2
+
+      - name: Find and Replace
+
+        uses: jacobtomlinson/gha-find-replace@master
+
+        with:
+
+          find: "DeadlyBot"
+
+          replace: "VisaXBot"
+
+      - name: Create Pull Request
+
+        uses: stefanzweifel/git-auto-commit-action@v4
+
+        with:
+
+          commit_message: 'Replaced new name'
+
+          commit_options: '--no-verify'
+
+          repository: .
+
+          commit_user_name: D15H4NT0P
+
+          commit_user_email: dishantmeena456@gmail.com
